Update contact email in privacy policy

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p class="meta">
       <strong>App:</strong> RJ GitHub→LinkedIn Devlog Bot (personal use)<br />
       <strong>Effective date:</strong> January 27, 2026<br />
-      <strong>Contact:</strong> RJ — <a href="mailto:YOUR_EMAIL_HERE">YOUR_EMAIL_HERE</a>
+      <strong>Contact:</strong> RJ — <a href="mailto:weinheimer.raymond@gmail.com">weinheimer.raymond@gmail.com</a>
     </p>
 
     <div class="box">
